--- a/Fruction/Fruction.vcxproj
+++ b/Fruction/Fruction.vcxproj
@@ -24,6 +24,7 @@
     <ProjectGuid>{f8d50447-6222-4986-a9da-3f97ac0d4b40}</ProjectGuid>
     <RootNamespace>Fruction</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
+    <ProjectName>Fraction</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
